@@ -1,19 +1,22 @@
 package com.kirillova.gymcrmsystem.dao;
 
+import com.kirillova.gymcrmsystem.BaseTest;
+import com.kirillova.gymcrmsystem.models.Trainee;
 import com.kirillova.gymcrmsystem.models.Trainer;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static com.kirillova.gymcrmsystem.TraineeTestData.TRAINEE_1;
-import static com.kirillova.gymcrmsystem.TraineeTestData.TRAINEE_1_ID;
 import static com.kirillova.gymcrmsystem.TraineeTestData.TRAINEE_2;
 import static com.kirillova.gymcrmsystem.TraineeTestData.TRAINEE_3;
 import static com.kirillova.gymcrmsystem.TraineeTestData.TRAINEE_4;
 import static com.kirillova.gymcrmsystem.TrainerTestData.TRAINER_1;
-import static com.kirillova.gymcrmsystem.TrainerTestData.TRAINER_1_ID;
 import static com.kirillova.gymcrmsystem.TrainerTestData.TRAINER_2;
 import static com.kirillova.gymcrmsystem.TrainerTestData.TRAINER_3;
 import static com.kirillova.gymcrmsystem.TrainerTestData.TRAINER_4;
@@ -22,9 +25,11 @@ import static com.kirillova.gymcrmsystem.TrainerTestData.checkTrainerSpecializat
 import static com.kirillova.gymcrmsystem.TrainerTestData.checkTrainerUserId;
 import static com.kirillova.gymcrmsystem.TrainerTestData.getNewTrainer;
 import static com.kirillova.gymcrmsystem.TrainerTestData.getUpdatedTrainer;
+import static com.kirillova.gymcrmsystem.UserTestData.USER_1;
 import static com.kirillova.gymcrmsystem.UserTestData.USER_5;
+import static com.kirillova.gymcrmsystem.UserTestData.USER_9;
 
-class TrainerDAOTest extends AbstractDAOTest {
+class TrainerDAOTest extends BaseTest {
 
     @Autowired
     private TrainerDAO trainerDAO;
@@ -35,7 +40,7 @@ class TrainerDAOTest extends AbstractDAOTest {
         int trainerId = savedTrainer.getId();
         Trainer newTrainer = getNewTrainer();
         newTrainer.setId(trainerId);
-        Trainer trainer = trainerDAO.get(trainerId);
+        Trainer trainer = trainerDAO.get(USER_9.getUsername());
 
         TRAINER_MATCHER.assertMatch(savedTrainer, newTrainer);
         TRAINER_MATCHER.assertMatch(trainer, newTrainer);
@@ -47,7 +52,7 @@ class TrainerDAOTest extends AbstractDAOTest {
     void update() {
         Trainer updatedTrainer = getUpdatedTrainer();
         trainerDAO.update(updatedTrainer);
-        Trainer trainer = trainerDAO.get(TRAINER_1_ID);
+        Trainer trainer = trainerDAO.get(USER_5.getUsername());
 
         TRAINER_MATCHER.assertMatch(trainer, updatedTrainer);
         checkTrainerUserId(updatedTrainer, trainer);
@@ -56,26 +61,18 @@ class TrainerDAOTest extends AbstractDAOTest {
 
     @Test
     void get() {
-        Trainer retrievedTrainer = trainerDAO.get(TRAINER_1_ID);
+        Trainer retrievedTrainer = trainerDAO.get(USER_5.getUsername());
 
         TRAINER_MATCHER.assertMatch(retrievedTrainer, TRAINER_1);
         checkTrainerUserId(TRAINER_1, retrievedTrainer);
         checkTrainerSpecializationId(TRAINER_1, retrievedTrainer);
     }
 
-    @Test
-    void getByUserId() {
-        Trainer retrievedTrainer = trainerDAO.getByUserId(USER_5.getId());
+    @ParameterizedTest
+    @MethodSource("provideTraineesAndExpectedTrainers")
+    void getFreeTrainersByUsername(Trainee trainee, List<Trainer> expected) {
+        List<Trainer> actual = trainerDAO.getFreeTrainersForTrainee(trainee.getUser().getUsername());
 
-        TRAINER_MATCHER.assertMatch(retrievedTrainer, TRAINER_1);
-        checkTrainerUserId(TRAINER_1, retrievedTrainer);
-        checkTrainerSpecializationId(TRAINER_1, retrievedTrainer);
-    }
-
-    @Test
-    void getFreeTrainersByUsernameForTrainee1() {
-        List<Trainer> actual = trainerDAO.getFreeTrainersForUsername(TRAINEE_1.getUser().getUsername());
-        List<Trainer> expected = Arrays.asList(TRAINER_1, TRAINER_3);
         TRAINER_MATCHER.assertMatch(actual, expected);
 
         for (int i = 0; i < expected.size(); i++) {
@@ -84,46 +81,19 @@ class TrainerDAOTest extends AbstractDAOTest {
         }
     }
 
-    @Test
-    void getFreeTrainersByUsernameForTrainee2() {
-        List<Trainer> actual = trainerDAO.getFreeTrainersForUsername(TRAINEE_2.getUser().getUsername());
-        List<Trainer> expected = Arrays.asList(TRAINER_1, TRAINER_4);
-
-        TRAINER_MATCHER.assertMatch(actual, expected);
-        for (int i = 0; i < expected.size(); i++) {
-            checkTrainerUserId(expected.get(i), actual.get(i));
-            checkTrainerSpecializationId(expected.get(i), actual.get(i));
-        }
-    }
-
-    @Test
-    void getFreeTrainersByUsernameForTrainee3() {
-        List<Trainer> actual = trainerDAO.getFreeTrainersForUsername(TRAINEE_3.getUser().getUsername());
-        List<Trainer> expected = Arrays.asList(TRAINER_1, TRAINER_3, TRAINER_4);
-
-        TRAINER_MATCHER.assertMatch(actual, expected);
-        for (int i = 0; i < expected.size(); i++) {
-            checkTrainerUserId(expected.get(i), actual.get(i));
-            checkTrainerSpecializationId(expected.get(i), actual.get(i));
-        }
-    }
-
-    @Test
-    void getFreeTrainersByUsernameForTrainee4() {
-        List<Trainer> actual = trainerDAO.getFreeTrainersForUsername(TRAINEE_4.getUser().getUsername());
-        List<Trainer> expected = Arrays.asList(TRAINER_2, TRAINER_3);
-
-        TRAINER_MATCHER.assertMatch(actual, expected);
-        for (int i = 0; i < expected.size(); i++) {
-            checkTrainerUserId(expected.get(i), actual.get(i));
-            checkTrainerSpecializationId(expected.get(i), actual.get(i));
-        }
+    private static Stream<Arguments> provideTraineesAndExpectedTrainers() {
+        return Stream.of(
+                Arguments.of(TRAINEE_1, List.of(TRAINER_1, TRAINER_3)),
+                Arguments.of(TRAINEE_2, List.of(TRAINER_1, TRAINER_4)),
+                Arguments.of(TRAINEE_3, List.of(TRAINER_1, TRAINER_3, TRAINER_4)),
+                Arguments.of(TRAINEE_4, List.of(TRAINER_2, TRAINER_3))
+        );
     }
 
     @Test
     void getTrainersForTrainee() {
-        List<Trainer> expected = trainerDAO.getTrainersForTrainee(TRAINEE_1_ID);
-        List<Trainer> actual = Arrays.asList(TRAINER_2, TRAINER_4);
+        List<Trainer> actual = trainerDAO.getTrainersForTrainee(USER_1.getUsername());
+        List<Trainer> expected = List.of(TRAINER_2, TRAINER_4);
 
         TRAINER_MATCHER.assertMatch(actual, expected);
         for (int i = 0; i < expected.size(); i++) {
